elearningProject/force-app/main/default/objects/Trail__c/fields/Num_of_Modules__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Modules__c</fullName>
    <label>Num of Modules</label>
    <summaryForeignKey>Trail_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>