elearningProject/force-app/main/default/objects/Trail__c/fields/Trail_Estimated_Time__c.field-meta.xml
<CustomField>
    <fullName>Trail_Estimated_Time__c</fullName>
    <label>Trail Estimated Time</label>
    <summarizedField>Trail_Module__c.Estimated_time__c</summarizedField>
    <summaryForeignKey>Trail_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>