elearningProject/force-app/main/default/objects/Trail__c/fields/Trail_Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Trail_Max_Score__c</fullName>
    <label>Trail Max Score</label>
    <summarizedField>Trail_Module__c.Max_Score__c</summarizedField>
    <summaryForeignKey>Trail_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>